--- a/billede-slider.html
+++ b/billede-slider.html
@@ -10,17 +10,20 @@
         <link href="https://fonts.googleapis.com/css2?family=El+Messiri&family=Montserrat:wght@300&display=swap" rel="stylesheet">
     </head>
 <body>
+    <nav>
+        <a href="http://154774.web.dania-studerende.dk/"><img src="Wordmark-1-hvid.png" id="logo"></a>
+    </nav>
     <div id="opbygning">
-        <section id="konfigurator">
+        <section id="sektion">
             <section id="logoogoverskrift">
-                <a><img src="Wordmark-1-sort.png" id="logo"></a>
-                <h1>Konfigurator</h1>
+                <h1>Aktuelle sager</h1>
             </section>
             <section id="pilevenstre">
                 <a onclick="skiftVenstre1()"><img src="pilvenstre.png" class="forstepil" id="vpil1"></a>
             </section>
             <section id="sager">
                 <img id="sag1">
+                <a href="http://154774.web.dania-studerende.dk/"><button>Tilbage</button></a>
             </section>
             <section id="pilehojre">
                 <a onclick="skiftHojre1()"><img src="pilhojre.png" class="forstepil" id="hpil1"></a>
